<resources>
    <string name="app_name">DevHeroApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_notice_home">Você tem 0 projetos</string>
    <string name="label_notice_login">novas notificações</string>
    <string name="label_notice_home_user">Você tem %1$s projetos</string>
    <string name="email">E-mail</string>
    <string name="text_welcome_home">Bem-vindo(a) de volta</string>
    <string name="text_welcome_loguin">Bem-vindo(a) de\nvolta, <b><font color="#2196F3">%1$s</font></b></string>
    <string name="text_welcome">Seja Bem-vindo(a)\nDesenvolvedor</string>
    <string name="text_welcome_user">Bem-vindo(a) de volta, %1$s</string>
    <string name="text_app_information">Conecte-se a sua rede e explore milhares de\nprojetos no mundo todo.</string>
    <string name="password">Senha</string>
    <string name="label_logon">Logon</string>
    <string name="label_login">Login</string>
    <string name="error">ERROR</string>
    <string name="login">user logado</string>
    <string name="pass_error">Senha Inválida</string>
    <string name="email_error">Email inválido</string>
    <string name="error_add">Preencha os campos</string>
    <string name="error_login">Verifique dados de acesso ou cadastre-se</string>
    <string name="error_logon">Todos os campos precisam estar preenchidos</string>
    <string name="text_project_information">Meus projetos</string>
    <string name="item_mail">teste@teste.com.br</string>
    <string name="item_name">Google</string>
    <string name="devhero_name">DevHero: <b><font color="#2196F3">%1$s</font></b></string>
    <string name="user_name">Nome</string>
    <string name="password_confirm">Confirmar senha</string>
    <string name="text_account">Criar sua conta</string>
    <string name="text_account_newuser">Conta Registrada</string>
    <string name="text_account_register">Registrando Usuário</string>
    <string name="text_app_information_account">Apresente seu trabalho e encontre novas inspirações, escolhidas especialmente pra você</string>
    <string name="pass_error_confirm">Senhas não conferem</string>
    <string name="username_error">Nome de usuário inválido</string>
    <string name="label_logout">Logout</string>
    <string name="error_api">Ops! Algo deu errado. Tente novamente.</string>
    <string name="loading">Entrando...</string>
    <string name="acess">Acessar conta</string>
    <string name="acess_google">Acessar com Google</string>
    <string name="priority">Etapa</string>
    <string name="priority_1">Em Análise</string>
    <string name="priority_2">Em Desenvolvimento</string>
    <string name="priority_3">Testes</string>
    <string name="priority_4">Concluído</string>

</resources>